# VaxFinder-backend

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  mypy.ini  pyproject.toml  requirements.txt  run.py  vaxfinder.sql
.github/workflows/: main_vax-aggregator-api.yml  main_vax-availability-api.yml
api/: dependencies.py  docs.json  env_variables.py  main.py
api/database/: crud_service.py  database.py
api/routers/: addresses.py  entries.py  locations.py  organizations.py
app/: docs.json  logging_config.py  main.py
app/api/: dependencies.py  openapi_tags.py
app/core/: config.py
app/db/: database.py
app/schemas/: addresses.py  base.py  entries.py  enums.py  locations.py  misc.py  organizations.py  requirements.py  security.py  vaccine_availability.py  webPush.py
app/services/: addresses.py  base.py  discord.py  entries.py  exceptions.py  locations.py  organizations.py  requirements.py  security.py  utils.py  vaccine_availability.py  vaccine_availability_locations.py  vaccine_availability_requirement.py  vaccine_availability_timeslot.py  webPush.py
app/tests/: conftest.py  docker-compose.yml  settings.py  test_openapi.py
sql/delete_all_rows/: delete_all_rows_0.sql  delete_all_rows_1.sql  delete_all_rows_2.sql  delete_all_rows_3.sql  delete_all_rows_4.sql
sql/setup/: setup_0.sql  setup_1.sql  setup_10.sql  setup_100.sql  setup_102.sql  setup_103.sql  setup_104.sql  setup_105.sql  setup_106.sql  setup_107.sql  setup_108.sql  setup_109.sql  setup_11.sql  setup_110.sql  (+208 more)
vaxfinder/: appointments.py  database.py
(+20 files in other folders)
